--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -10,10 +10,17 @@ Fonts used:
 ====================================== */
 
 $europa: europa, roboto, Georgia, sans-serif;
-$neue-haas: neue-haas-unica, Helvetica, sans-serif;
+// $neue-haas: neue-haas-unica, Helvetica, sans-serif;
 $monospace: roboto-mono, monospace;
-$forma: forma-djr-micro, Helvetica, sans-serif;
-$trade-gothic: trade-gothic-next, sans-serif;
+// $forma: forma-djr-micro, Helvetica, sans-serif;
+// $trade-gothic: trade-gothic-next, sans-serif;
+$grotesk: neue-haas-grotesk-text, Helvetica, sans-serif;
+$grotesk-d: neue-haas-grotesk-display, Helvetica, sans-serif;
+$omnes-pro: omnes-semicond, Helvetica, sans-serif;
 
 
-$body: $europa;
+$header: $grotesk-d;
+$splash: $europa;
+$splash-name: $grotesk-d;
+$body: $omnes-pro;
+$button: $grotesk;
