--- a/src/includes/landing.liquid
+++ b/src/includes/landing.liquid
@@ -73,21 +73,21 @@
             <div class="splash-info-padding">
               <div class="splash-hi">Check out my work on</div>
               <div class="splash-info-big">Github.</div>
-              <div class="splash-desc">https://github.com/64bitpandas</div>
+              <div class="splash-desc">github.com/64bitpandas</div>
             </div>
           </div>
           <div class="linkedin splash-info" id="linkedin-splash">
             <div class="splash-info-padding">
               <div class="splash-hi">Check out my profile on</div>
               <div class="splash-info-big">LinkedIn.</div>
-              <div class="splash-desc">https://linkedin.com/in/bencuan</div>
+              <div class="splash-desc">linkedin.com/in/bencuan</div>
             </div>
           </div>
           <div class="resume splash-info" id="resume-splash">
             <div class="splash-info-padding">
               <div class="splash-hi">View my</div>
               <div class="splash-info-big">Resume.</div>
-              <div class="splash-desc">https://bencuan.me/resume</div>
+              <div class="splash-desc">bencuan.me/resume</div>
             </div>
           </div>
           <div class="email splash-info" id="email-splash">
@@ -100,7 +100,7 @@
             <div class="splash-info-padding">
               <div class="splash-hi">Play my games at</div>
               <div class="splash-info-big">itch.io.</div>
-              <div class="splash-desc">https://itch.io/profile/64bitpandas</div>
+              <div class="splash-desc">64bitpandas.itch.io</div>
             </div>
           </div>
         </div>
