--- a/src/includes/head.liquid
+++ b/src/includes/head.liquid
@@ -8,13 +8,15 @@
   <meta property="og:description" content="Hi! I'm Ben, and this is my site :)">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://bencuan.me">
-  <meta property="og:image" content="img/icon.png">
+  <meta property="og:image" content="img/og-banner.png">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:width" content="1200">
   <meta property="og:site_name" content="bencuan.me">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="img/icon.png">
   <!-- Place favicon.ico in the root directory -->
-<link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/simple-grid.min.css">
   <link rel="stylesheet" href="/css/custom.css">
 
