Add noopener to links, optimize fonts

--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -14,7 +14,7 @@ $europa: europa, roboto, Georgia, sans-serif;
 $monospace: roboto-mono, monospace;
 // $forma: forma-djr-micro, Helvetica, sans-serif;
 // $trade-gothic: trade-gothic-next, sans-serif;
-$grotesk: neue-haas-grotesk-text, Helvetica, sans-serif;
+// $grotesk: neue-haas-grotesk-text, Helvetica, sans-serif;
 $grotesk-d: neue-haas-grotesk-display, Helvetica, sans-serif;
 $omnes-pro: omnes-semicond, Helvetica, sans-serif;
 
@@ -23,5 +23,5 @@ $header: $grotesk-d;
 $splash: $europa;
 $splash-name: $grotesk-d;
 $body: $omnes-pro;
-$button: $grotesk;
+$button: $grotesk-d;
 $nav: $omnes-pro;
