--- a/src/includes/about.liquid
+++ b/src/includes/about.liquid
@@ -6,11 +6,11 @@
         <img class="about-img" alt="Profile Image" src="img/icon.png" loading="lazy">
         Hi there! I'm Ben, a junior at UC Berkeley studying Computer Science and Psychology.
         I enjoy making all sorts of things (like this website!), especially in the full-stack development space. 
-        I've also been rather involved in teaching, and am a current TA for <a href="https://cs61a.org" target="_blank" class="link">CS 61A</a> (among <a href="#teaching" class="link">other things</a>).
+        I've also been rather involved in teaching, and am a current TA for <a href="https://cs61a.org" target="_blank" class="link" rel="noopener">CS 61A</a> (among <a href="#teaching" class="link">other things</a>).
         <br><br>
 
         In addition to the typical software stack, you can often find me designing and developing games with my
-        fellow developers at <a href="https://hexcaliber.dev" class="link" target="_blank">Hexcaliber Games</a>.
+        fellow developers at <a href="https://hexcaliber.dev" class="link" target="_blank" rel="noopener">Hexcaliber Games</a>.
 
         <br><br>
 
