--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -3,6 +3,7 @@ A collection of helpful Sass mixins.
 Created by Ben Cuan with contributions
 from various sources cited below.
 ====================================== */
+@use "sass:math";
 @use '_colors';
 
 /**
@@ -13,7 +14,7 @@ from various sources cited below.
  */
 @mixin font-size($size, $base: 16) {
   font-size: $size; // fallback for old browsers
-  font-size: ($size / $base) * 1rem;
+  font-size: math.div($size, $base) * 1rem;
 }
 
 /**
