Remove work notice

--- a/src/includes/contact.liquid
+++ b/src/includes/contact.liquid
@@ -8,10 +8,10 @@
       <div class="btn-proj btn-contact" onclick="openInNewTab('mailto:contact@bencuan.me')">
         <div class="content">Email me!</div>
       </div>
-      <div class="contact-text center">
+      <!-- <div class="contact-text center">
         I'm currently looking for Summer 2022 internships in the SF Bay Area.
         If you know of any opportunities, I'd love to hear about them!
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
