--- a/src/includes/teaching.liquid
+++ b/src/includes/teaching.liquid
@@ -4,9 +4,9 @@
     <div class="content-box" id="teaching-content">
         <div class="content content-text">
             I am currently a TA for <a href="https://cs61a.org" target="_blank" class="link" rel="noopener">CS 61A</a> at Berkeley. 
-            Fall 2021 will be my 4th time teaching the course; I'm excited to be back! (If you're a 61A student, hello!! I hope to see you around in lab/discussion/office hours :)
+            Spring 2022 will be my 5th time teaching the course; I'm excited to be back! (If you're a 61A student, hello!! I hope to see you around in lab/discussion/office hours :)
             <br /> <br />
-            Aside from 61A, I am also a <a href="https://csmentors.berkeley.edu" target="_blank" class="link" rel="noopener">CSM</a> mentor for CS 61B and
+            Aside from 61A, I am also a <a href="https://csmentors.berkeley.edu" target="_blank" class="link" rel="noopener">CSM</a> tech mentor and
             head facilitator for the <a href="https://decal.ocf.io" target="_blank" class="link" rel="noopener">Linux SysAdmin
                 Decal</a>. Last summer, I was an Instructional Assistant for <a href="https://atdp.berkeley.edu" target="_blank" class="link" rel="noopener">ATDP's</a> data structures course. 
             <br /> <br />
