fa22 content update

--- a/src/includes/about.liquid
+++ b/src/includes/about.liquid
@@ -4,9 +4,9 @@
     <div class="content-box" id="about-content">
     <div class="content content-text">
         <img class="about-img" alt="Profile Image" src="img/icon.png" loading="lazy">
-        Hi there! I'm Ben, a junior at UC Berkeley studying Computer Science and Psychology.
+        Hi there! I'm Ben, a 4th year student at UC Berkeley studying Computer Science and Psychology.
         I enjoy making all sorts of things (like this website!), especially in the full-stack development space. 
-        I've also been rather involved in teaching, and am a current TA for <a href="https://cs61a.org" target="_blank" class="link" rel="noopener">CS 61A</a> (among <a href="#teaching" class="link">other things</a>).
+        I've also been rather involved in teaching, and am a current TA for <a href="https://cs186berkeley.net" target="_blank" class="link" rel="noopener">CS 186</a> (among <a href="#teaching" class="link">other things</a>).
         <br><br>
 
         In addition to the typical software stack, you can often find me designing and developing games with my
@@ -40,10 +40,10 @@
         </div>
         <div class="row">
         <div class="col-2 tool-icons">
-            <i class="icon-adobexd"></i>
+            {% comment %} <i class="icon-adobexd"></i> {% endcomment %}
             <i class="fab fa-figma"></i>
         </div>
-        <div class="col-9 tools-text"><b>Adobe XD and Figma</b> for design</div>
+        <div class="col-9 tools-text"><b>Figma</b> for design</div>
         </div>
         <div class="row">
         <div class="col-2 tool-icons">
