--- a/src/includes/contact.liquid
+++ b/src/includes/contact.liquid
@@ -5,6 +5,10 @@
         Thanks for taking a look at my site! If there's anything (literally anything) you'd like to
         talk to me about, feel free to send an email to <a class="link" href="mailto:contact@bencuan.me">contact@bencuan.me</a>.
       </div>
+      <br/>
+      <div class="contact-text center">
+        Now seeking full-time positions starting September 2023!
+      </div>
       <div class="btn-proj btn-contact" onclick="openInNewTab('mailto:contact@bencuan.me')">
         <div class="content">Email me!</div>
       </div>
