--- a/src/includes/teaching.liquid
+++ b/src/includes/teaching.liquid
@@ -3,14 +3,13 @@
     <div class="section-head center-head">Teaching</div>
     <div class="content-box" id="teaching-content">
         <div class="content content-text">
-            I am currently a TA for <a href="https://cs61a.org" target="_blank" class="link" rel="noopener">CS 61A</a> at Berkeley. 
-            Spring 2022 will be my 5th time teaching the course; I'm excited to be back! (If you're a 61A student, hello!! I hope to see you around in lab/discussion/office hours :)
-            <br /> <br />
-            Aside from 61A, I am also a <a href="https://csmentors.berkeley.edu" target="_blank" class="link" rel="noopener">CSM</a> tech mentor and
+            I'm currently a TA for <a href="https://cs186berkeley.net" target="_blank" class="link" rel="noopener">CS 186</a>, the Databases course at Berkeley. (If you're a 186 student right now, hello! Please come by discussion and OH for fun times :)
+            <br /><br />
+            Previously, I have also been a TA and tutor for <a href="https://cs61a.org" target="_blank" class="link" rel="noopener">CS 61A</a>, a <a href="https://csmentors.berkeley.edu" target="_blank" class="link" rel="noopener">CSM</a> senior mentor,
             head facilitator for the <a href="https://decal.ocf.io" target="_blank" class="link" rel="noopener">Linux SysAdmin
-                Decal</a>. Last summer, I was an Instructional Assistant for <a href="https://atdp.berkeley.edu" target="_blank" class="link" rel="noopener">ATDP's</a> data structures course. 
+            Decal</a>, and an Instructional Assistant for <a href="https://atdp.berkeley.edu" target="_blank" class="link" rel="noopener">ATDP's</a> data structures course. 
             <br /> <br />
-            Here are some links for my teaching resources!
+            Here are some links to my teaching resources!
             <br /> <br />
             {% for lnk in teaching-links %}
                 <a href="{{lnk.url}}" target="_blank" rel="noopener" class="link teaching-link">• {{lnk.name}} <i class="fas fa-chevron-right"></i></a>
