--- a/src/includes/footer.liquid
+++ b/src/includes/footer.liquid
@@ -1,5 +1,5 @@
 <footer id="footer">
-  <div class="footer-text center">Designed and developed with ❤️ by Ben Cuan, June 2021</div>
+  <div class="footer-text center">Designed and developed with ❤️ by Ben Cuan, June 2021<br/>Last updated: August 2022</div>
   <div class="footer-text center"><a class="link" target="_blank" rel="noopener" href="https://github.com/64bitpandas/bencuan.me">Browse the source at <i class="fab fa-github footer-icon"></i> !</a></div>
   <div class="footer-text center"><a class="link" href="/2018">2018</a> | <a class="link" href="/2019">2019</a> | <a class="link" href="/2020">2020</a></div>
 </footer>
