increase accessibility of buttons

--- a/src/includes/featured-projects.liquid
+++ b/src/includes/featured-projects.liquid
@@ -12,12 +12,12 @@
             </div>
         </div>
         <div class="col-4 feature-link-container">
-            <span class="feature-link" onclick="openInNewTab('{{project.github}}')">
-            <i class="fab fa-github"></i>
-            </span>
-            <span class="feature-link" onclick="openInNewTab('{{project.link}}')">
-            <i class="fas fa-globe"></i>
-            </span>
+            <a href="{{project.github}}" target="_blank" rel="noopener" class="feature-link">
+                <i class="fab fa-github"></i>
+            </a>
+            <a href="{{project.link}}" target="_blank" rel="noopener" class="feature-link">
+                <i class="fas fa-globe"></i>
+            </a>
         </div>
         </div>
 
