--- a/src/includes/contact.liquid
+++ b/src/includes/contact.liquid
@@ -9,9 +9,12 @@
       <div class="contact-text center">
         Now seeking full-time positions starting September 2023!
       </div>
-      <div class="btn-proj btn-contact" onclick="openInNewTab('mailto:contact@bencuan.me')">
-        <div class="content">Email me!</div>
-      </div>
+      <a href="mailto:contact@bencuan.me">
+        <div class="btn-proj btn-contact">
+          <div class="content">Email me!</div>
+        </div>
+      </a>
+
       <!-- <div class="contact-text center">
         I'm currently looking for Summer 2022 internships in the SF Bay Area.
         If you know of any opportunities, I'd love to hear about them!
