--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -5,10 +5,9 @@
 header {
     font-family: fonts.$header; 
     font-weight: 400;
-    margin: 0 auto;
     padding: 1rem;
     display: flex;
-    align-items: right;
+    align-items: center;
     justify-content: space-between;
 }
 
