--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -8,15 +8,14 @@ h1,
 h2,
 h3 {
     color: white;
+    font-family: fonts.$header;
 }
 
 h1 {
-    font-family: fonts.$header;
     margin: 0;
 }
 
 h2 {
-    font-family: fonts.$header;
     padding-top: 7rem;
     font-weight: 400;
     font-size: 2.5rem;
@@ -24,38 +23,15 @@ h2 {
 
 body {
     background-color: colors.$background;
+    min-height: 100vh;
+    margin: 0;
+
+    display: flex;
+    flex-direction: column;
 }
 
-.name {
-    padding: calc($padding - 2rem) $padding 0 $padding;
-    font-weight: 700;
-    font-size: 4rem;
-}
-
-.name-icons {
-    padding: 0.15rem $padding;
-    box-sizing: border-box;
-    color: white;
-    font-size: 2rem;
-    pointer-events: none;
-    transition: all 0.25s ease-in-out;
-
-    &:hover {
-        padding-bottom: 0;
-        padding-top: 0;
-    }
-}
-
-.name-icon {
-    color: white !important;
-    margin-right: 1rem;
-    transition: all 0.25s;
-    pointer-events: auto;
-
-}
-
-.name-icon:hover {
-    font-size: 115%;
+main {
+    flex: 1;
 }
 
 // LINKS
@@ -96,62 +72,16 @@ body {
 }
 
 footer {
-    position: fixed;
     bottom: 0;
     padding: $padding;
     padding-bottom: calc($padding - 2rem);
     color: white;
     font-family: fonts.$header;
-
 }
 
 .showarchive {
     cursor: pointer;
 }
-
-.home-links {
-    margin-top: 3rem;
-}
-
-.home-link-icon {
-    filter: colors.$blue-filter;
-    opacity: 0;
-    width: 0;
-    display: var(--fa-display, inline-block);
-    height: 1em;
-    overflow: visible;
-    vertical-align: -0.125em;
-    transition: all 0.1s;
-}
-
-.home-link {
-    color: white;
-    font-family: fonts.$header;
-    font-size: 2.5rem;
-    flex-grow: 1;
-    text-decoration: none;
-    transition: all 0.1s;
-    padding-left: $padding;
-    padding-right: $padding;
-
-    &:hover {
-        background: colors.$background-light;
-        font-weight: 800;
-    }
-
-    &:hover a,
-    &:hover {
-        color: colors.$highlight !important;
-    }
-
-    &:hover .home-link-icon {
-        color: white;
-        opacity: 1;
-        width: inherit;
-    }
-
-}
-
 
 @include mixins.screen('desktop') {
     .container {
@@ -181,4 +111,22 @@ p {
     font-size: 1.25rem;
     margin-bottom: 1.5rem;
     margin-top: 0;
+}
+
+
+// SCROLLBAR
+html::-webkit-scrollbar {
+    width: 12px;
+    height: 16px;
+}
+
+html::-webkit-scrollbar-thumb {
+    background: colors.$selection;
+    border-radius: 8px;
+    // box-shadow: inset 2px 2px 2px hsla(0,0%,100%,.25),inset -2px -2px 2px rgba(0,0,0,.25);
+}
+
+html::-webkit-scrollbar-track {
+    // background: linear-gradient(90deg,#434343,#434343 1px,#111 0,#111);
+    background-color: colors.$background-alt;
 }
