--- a/src/sass/contact.scss
+++ b/src/sass/contact.scss
@@ -1,5 +1,6 @@
 @use 'fonts';
 @use 'colors';
+@use 'mixins';
 
 p {
     font-size: 1.5rem;
@@ -7,7 +8,10 @@ p {
 
 .contact-icon {
     margin-right: 1rem;
-    transform: scale(1.25);
+
+    @include mixins.screen('desktop') {
+        transform: scale(1.25);
+    }
 }
 
 .contact-img {
