--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -32,6 +32,10 @@ header {
     color: colors.$green;
 }
 
+.status-red {
+    color: colors.$red;
+}
+
 
 @include mixins.screen("desktop") {
     .nav-links {
