--- a/src/components/seo.astro
+++ b/src/components/seo.astro
@@ -2,7 +2,7 @@
 import { SEO } from "astro-seo";
 const {title, description} = Astro.props;
 ---
-
+<meta charset="UTF-8" />
 <SEO
   title={title}
   description={description}
