--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -39,9 +39,105 @@
     src: url('../fonts/PPNeueMontreal-Bold.woff2');
 }
 
-$header: Fraktion,
-Rubik,
+@font-face {
+    font-family: Novela;
+    src: url('../fonts/novela-black-webfont.woff2') format('woff2');
+    font-weight: bolder;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Novela;
+    src: url('../fonts/novela-blackitalic-webfont.woff2') format('woff2');
+    font-weight: bolder;
+    font-style: italic;
+
+}
+
+@font-face {
+    font-family: Novela;
+    src: url('../fonts/novela-bold-webfont.woff2') format('woff2');
+    font-weight: bold;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: Novela;
+    src: url('../fonts/novela-bolditalic-webfont.woff2') format('woff2');
+    font-weight: bold;
+    font-style: italic;
+
+}
+
+@font-face {
+    font-family: Novela;
+    src: url('../fonts/novela-regular-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: Novela;
+    src: url('../fonts/novela-regularitalic-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: italic;
+
+}
+
+@font-face {
+    font-family: Novela;
+    src: url('../fonts/novela-semibold-webfont.woff2') format('woff2');
+    font-weight: 600;
+    font-style: italic;
+
+}
+
+@font-face {
+    font-family: Novela;
+    src: url('../fonts/novela-semibolditalic-webfont.woff2') format('woff2');
+    font-weight: 600;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: Lora;
+    src: url('Lora-VariableFont_wght.ttf') format('ttf');
+    font-weight: 1 999;
+}
+
+@font-face {
+    font-family: Lora;
+    src: url('../fonts/Lora-Italic-VariableFont_wght.ttf') format('truetype');
+    font-weight: 1 999;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: Eiko;
+    src: url('/fonts/PPEiko-Regular.ttf') format('truetype');
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: Eiko;
+    src: url('/fonts/PPEiko-Heavy.ttf') format('truetype');
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: Eiko;
+    src: url('/fonts/PPEiko-Medium.ttf') format('truetype');
+    font-weight: 500;
+}
+
+$header: Eiko,
+Lora,
 sans-serif;
-$body: NeueMontreal,
+$body: Novela,
+Lora,
+serif;
+$ui: Fraktion,
 Rubik,
 sans-serif;
