get latest commit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Seo from '../components/seo.astro';
 <head>
     <Seo title="bencuan's website" description='builder' />
 </head>
-<Layout currPage="bencuan">
+<Layout currPage="bencuan" client:load>
     <h1 class="name">ben cuan</h1>
     <div>
         awesome content
