--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../components/layout';
 import Seo from '../components/seo.astro';
+import '../sass/home.scss';
 ---
 
 <head>
@@ -8,7 +9,7 @@ import Seo from '../components/seo.astro';
 </head>
 <Layout currPage="bencuan" client:load>
     <h1 class="name">ben cuan</h1>
-    <div>
-        awesome content
-    </div>
+    <p class="splash">
+        I build things and write about them sometimes.
+    </p>
 </Layout>
