--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,4 +1,4 @@
-$background: #323B47;
+$background: #faf4ed;
 $background-alt: #2A2C31;
 $background-light: #EEEEEE;
 $selection: #FFC85C;
@@ -6,5 +6,5 @@ $link: #8DB4FF;
 $highlight: #5588FF;
 $green: #1AEC22;
 $red: #F41919;
-
+$text: #4c4f69;
 $blue-filter: invert(49%) sepia(38%) saturate(4860%) hue-rotate(208deg) brightness(105%) contrast(101%);
