--- a/src/sass/layout.scss
+++ b/src/sass/layout.scss
@@ -7,7 +7,7 @@ $padding: 10vw;
 h1,
 h2,
 h3 {
-    color: white;
+    color: colors.$text;
     font-family: fonts.$header;
 }
 
@@ -24,6 +24,7 @@ h2 {
 body {
     margin: 0;
 }
+
 .body {
     background-color: colors.$background;
     min-height: 100vh;
@@ -33,18 +34,20 @@ body {
     flex-direction: column;
 
 }
+
 main {
     flex: 1;
+
     @include mixins.screen("not-desktop") {
-         z-index: 1;
+        z-index: 1;
         // position: absolute;
-     }
+    }
 }
 
 // LINKS
 .link {
     text-decoration: none;
-    color: white !important;
+    color: colors.$text !important;
     font-weight: normal;
 
     @include mixins.screen("desktop") {
@@ -65,7 +68,7 @@ main {
             height: 2px;
             bottom: -1px;
             left: 0;
-            background-color: white;
+            background-color: colors.$text;
             visibility: hidden;
             transform: scaleX(0);
             font-weight: bold;
@@ -83,7 +86,7 @@ main {
 footer {
     bottom: 0;
     padding: 3rem $padding;
-    color: white;
+    color: colors.$text;
     font-family: fonts.$ui;
 
     @include mixins.screen("not-desktop") {
@@ -101,7 +104,7 @@ footer {
 }
 
 .title {
-    color: white;
+    color: colors.$text;
     font-weight: 700;
     font-size: 4rem;
 }
@@ -115,7 +118,7 @@ footer {
 }
 
 p {
-    color: white;
+    color: colors.$text;
     font-family: fonts.$body;
     font-size: 1.25rem;
     margin-bottom: 1.5rem;
